[gd_scene load_steps=15 format=3 uid="uid://dg10f4o51no78"]

[ext_resource type="FontFile" uid="uid://ddchymcsw70o1" path="res://addons/kenneyUI/Font/Kenney Future Narrow.ttf" id="1_v6p8y"]
[ext_resource type="PackedScene" uid="uid://cyl6kln6x45yr" path="res://addons/kaykit_prototype_bits/Assets/gltf/Floor.gltf" id="2_ak2if"]
[ext_resource type="Script" uid="uid://rngndmt4v3m0" path="res://title_screen.gd" id="2_hafda"]
[ext_resource type="PackedScene" uid="uid://c3ijen5tiorcg" path="res://addons/kaykit_prototype_bits/Assets/gltf/Wall_Decorated.gltf" id="3_ig5kc"]
[ext_resource type="PackedScene" uid="uid://dxu5uigr46yey" path="res://addons/kaykit_prototype_bits/Assets/gltf/Coin_A.gltf" id="4_05l2w"]

[sub_resource type="ViewportTexture" id="ViewportTexture_ig5kc"]
viewport_path = NodePath("CenterContainer/HSplitContainer/SubViewport")

[sub_resource type="BoxShape3D" id="BoxShape3D_05l2w"]
size = Vector3(4, 1, 4)

[sub_resource type="BoxShape3D" id="BoxShape3D_hafda"]
size = Vector3(4, 4, 0.5)

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ig5kc"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
energy_multiplier = 1.05

[sub_resource type="Sky" id="Sky_hafda"]
sky_material = SubResource("ProceduralSkyMaterial_ig5kc")

[sub_resource type="Environment" id="Environment_hafda"]
background_mode = 2
sky = SubResource("Sky_hafda")
tonemap_mode = 2

[sub_resource type="GDScript" id="GDScript_ig5kc"]
script/source = "extends Camera3D

@onready var target = get_node(\"../StaticFloor\")
@export var distance: float = 5.0
@export var rotation_speed: float = 5.0
var angle := 30.0

func _process(delta):
	if not target:
		return
	angle += rotation_speed * delta
	var x = cos(deg_to_rad(angle)) * distance
	var z = sin(deg_to_rad(angle)) * distance
	global_transform.origin = target.global_transform.origin + Vector3(x, 3, z)
	look_at(target.global_transform.origin, Vector3.UP)
"

[sub_resource type="GDScript" id="GDScript_hafda"]
script/source = "extends Area3D

func _on_body_entered(body) -> void:
	if (body.get_name() == \"CharacterBody3D\"):
		queue_free()
		body.add_coin()

func _process(delta):
	rotate_y(2 * delta)  # 2 = Geschwindigkeit, Y-Achse
"

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_tpml5"]
data = PackedVector3Array(-0.25, 0.433, -0.1, 0, 0.5, 0.1, -0.25, 0.433, 0.1, -0.25, 0.433, -0.1, 0, 0.5, -0.1, 0, 0.5, 0.1, -0.433, 0.25, -0.1, -0.25, 0.433, -0.1, -0.25, 0.433, 0.1, 0, 0.5, -0.1, 0.25, 0.433, 0.1, 0, 0.5, 0.1, -0.433, 0.25, -0.1, -0.25, 0.433, 0.1, -0.433, 0.25, 0.1, 0, 0.5, -0.1, 0.25, 0.433, -0.1, 0.25, 0.433, 0.1, -0.5, 0, -0.1, -0.433, 0.25, -0.1, -0.433, 0.25, 0.1, 0.25, 0.433, -0.1, 0.433, 0.25, 0.1, 0.25, 0.433, 0.1, -0.5, 0, -0.1, -0.433, 0.25, 0.1, -0.5, 0, 0.1, 0.25, 0.433, -0.1, 0.433, 0.25, -0.1, 0.433, 0.25, 0.1, -0.433, -0.25, -0.1, -0.5, 0, -0.1, -0.5, 0, 0.1, 0.433, 0.25, -0.1, 0.5, 0, 0.1, 0.433, 0.25, 0.1, -0.433, -0.25, -0.1, -0.5, 0, 0.1, -0.433, -0.25, 0.1, 0.433, 0.25, -0.1, 0.5, 0, -0.1, 0.5, 0, 0.1, -0.25, -0.433, -0.1, -0.433, -0.25, -0.1, -0.433, -0.25, 0.1, 0.5, 0, -0.1, 0.433, -0.25, 0.1, 0.5, 0, 0.1, -0.25, -0.433, -0.1, -0.433, -0.25, 0.1, -0.25, -0.433, 0.1, 0.5, 0, -0.1, 0.433, -0.25, -0.1, 0.433, -0.25, 0.1, 0, -0.5, -0.1, -0.25, -0.433, -0.1, -0.25, -0.433, 0.1, 0.433, -0.25, -0.1, 0.25, -0.433, 0.1, 0.433, -0.25, 0.1, 0, -0.5, -0.1, -0.25, -0.433, 0.1, 0, -0.5, 0.1, 0.433, -0.25, -0.1, 0.25, -0.433, -0.1, 0.25, -0.433, 0.1, 0.25, -0.433, -0.1, 0, -0.5, -0.1, 0, -0.5, 0.1, 0.25, -0.433, -0.1, 0, -0.5, 0.1, 0.25, -0.433, 0.1, 0.3757, 0, 0.15, 0.2793, 0.1613, 0.1094, 0.3254, 0.1878, 0.15, 0.3254, 0.1878, 0.15, 0.2793, 0.1613, 0.1094, 0.1613, 0.2793, 0.1094, 0.3757, 0, 0.15, 0.3225, 0, 0.1094, 0.2793, 0.1613, 0.1094, 0.3254, 0.1878, 0.15, 0.1613, 0.2793, 0.1094, 0.1878, 0.3254, 0.15, 0.3254, -0.1878, 0.15, 0.3225, 0, 0.1094, 0.3757, 0, 0.15, 0.1878, 0.3254, 0.15, 0.1613, 0.2793, 0.1094, 0, 0.3225, 0.1094, 0.3254, -0.1878, 0.15, 0.2793, -0.1613, 0.1094, 0.3225, 0, 0.1094, 0.1878, 0.3254, 0.15, 0, 0.3225, 0.1094, 0, 0.3757, 0.15, 0.1878, -0.3254, 0.15, 0.2793, -0.1613, 0.1094, 0.3254, -0.1878, 0.15, 0, 0.3757, 0.15, 0, 0.3225, 0.1094, -0.1613, 0.2793, 0.1094, 0.1878, -0.3254, 0.15, 0.1613, -0.2793, 0.1094, 0.2793, -0.1613, 0.1094, 0, 0.3757, 0.15, -0.1613, 0.2793, 0.1094, -0.1878, 0.3254, 0.15, 0, -0.3757, 0.15, 0.1613, -0.2793, 0.1094, 0.1878, -0.3254, 0.15, -0.1878, 0.3254, 0.15, -0.1613, 0.2793, 0.1094, -0.2793, 0.1613, 0.1094, 0, -0.3757, 0.15, 0, -0.3225, 0.1094, 0.1613, -0.2793, 0.1094, -0.1878, 0.3254, 0.15, -0.2793, 0.1613, 0.1094, -0.3254, 0.1878, 0.15, -0.1878, -0.3254, 0.15, 0, -0.3225, 0.1094, 0, -0.3757, 0.15, -0.3254, 0.1878, 0.15, -0.2793, 0.1613, 0.1094, -0.3225, 0, 0.1094, -0.1878, -0.3254, 0.15, -0.1613, -0.2793, 0.1094, 0, -0.3225, 0.1094, -0.3254, 0.1878, 0.15, -0.3225, 0, 0.1094, -0.3757, 0, 0.15, -0.3254, -0.1878, 0.15, -0.1613, -0.2793, 0.1094, -0.1878, -0.3254, 0.15, -0.3757, 0, 0.15, -0.3225, 0, 0.1094, -0.2793, -0.1613, 0.1094, -0.3254, -0.1878, 0.15, -0.2793, -0.1613, 0.1094, -0.1613, -0.2793, 0.1094, -0.3757, 0, 0.15, -0.2793, -0.1613, 0.1094, -0.3254, -0.1878, 0.15, 0, 0.5, -0.1, 0.2241, 0.3882, -0.15, 0.25, 0.433, -0.1, 0.25, 0.433, -0.1, 0.2241, 0.3882, -0.15, 0.3882, 0.2241, -0.15, 0, 0.5, -0.1, 0, 0.4482, -0.15, 0.2241, 0.3882, -0.15, 0.25, 0.433, -0.1, 0.3882, 0.2241, -0.15, 0.433, 0.25, -0.1, -0.25, 0.433, -0.1, 0, 0.4482, -0.15, 0, 0.5, -0.1, 0.433, 0.25, -0.1, 0.3882, 0.2241, -0.15, 0.4482, 0, -0.15, -0.25, 0.433, -0.1, -0.2241, 0.3882, -0.15, 0, 0.4482, -0.15, 0.433, 0.25, -0.1, 0.4482, 0, -0.15, 0.5, 0, -0.1, -0.433, 0.25, -0.1, -0.2241, 0.3882, -0.15, -0.25, 0.433, -0.1, 0.5, 0, -0.1, 0.4482, 0, -0.15, 0.3882, -0.2241, -0.15, -0.433, 0.25, -0.1, -0.3882, 0.2241, -0.15, -0.2241, 0.3882, -0.15, 0.5, 0, -0.1, 0.3882, -0.2241, -0.15, 0.433, -0.25, -0.1, -0.5, 0, -0.1, -0.3882, 0.2241, -0.15, -0.433, 0.25, -0.1, 0.433, -0.25, -0.1, 0.3882, -0.2241, -0.15, 0.2241, -0.3882, -0.15, -0.5, 0, -0.1, -0.4482, 0, -0.15, -0.3882, 0.2241, -0.15, 0.433, -0.25, -0.1, 0.2241, -0.3882, -0.15, 0.25, -0.433, -0.1, -0.433, -0.25, -0.1, -0.4482, 0, -0.15, -0.5, 0, -0.1, 0.25, -0.433, -0.1, 0.2241, -0.3882, -0.15, 0, -0.4482, -0.15, -0.433, -0.25, -0.1, -0.3882, -0.2241, -0.15, -0.4482, 0, -0.15, 0.25, -0.433, -0.1, 0, -0.4482, -0.15, 0, -0.5, -0.1, -0.25, -0.433, -0.1, -0.3882, -0.2241, -0.15, -0.433, -0.25, -0.1, 0, -0.5, -0.1, 0, -0.4482, -0.15, -0.2241, -0.3882, -0.15, -0.25, -0.433, -0.1, -0.2241, -0.3882, -0.15, -0.3882, -0.2241, -0.15, 0, -0.5, -0.1, -0.2241, -0.3882, -0.15, -0.25, -0.433, -0.1, 0.25, 0.433, 0.1, 0, 0.4482, 0.15, 0, 0.5, 0.1, 0, 0.5, 0.1, 0, 0.4482, 0.15, -0.2241, 0.3882, 0.15, 0.25, 0.433, 0.1, 0.2241, 0.3882, 0.15, 0, 0.4482, 0.15, 0, 0.5, 0.1, -0.2241, 0.3882, 0.15, -0.25, 0.433, 0.1, 0.433, 0.25, 0.1, 0.2241, 0.3882, 0.15, 0.25, 0.433, 0.1, -0.25, 0.433, 0.1, -0.2241, 0.3882, 0.15, -0.3882, 0.2241, 0.15, 0.433, 0.25, 0.1, 0.3882, 0.2241, 0.15, 0.2241, 0.3882, 0.15, -0.25, 0.433, 0.1, -0.3882, 0.2241, 0.15, -0.433, 0.25, 0.1, 0.5, 0, 0.1, 0.3882, 0.2241, 0.15, 0.433, 0.25, 0.1, -0.433, 0.25, 0.1, -0.3882, 0.2241, 0.15, -0.4482, 0, 0.15, 0.5, 0, 0.1, 0.4482, 0, 0.15, 0.3882, 0.2241, 0.15, -0.433, 0.25, 0.1, -0.4482, 0, 0.15, -0.5, 0, 0.1, 0.433, -0.25, 0.1, 0.4482, 0, 0.15, 0.5, 0, 0.1, -0.5, 0, 0.1, -0.4482, 0, 0.15, -0.3882, -0.2241, 0.15, 0.433, -0.25, 0.1, 0.3882, -0.2241, 0.15, 0.4482, 0, 0.15, -0.5, 0, 0.1, -0.3882, -0.2241, 0.15, -0.433, -0.25, 0.1, 0.25, -0.433, 0.1, 0.3882, -0.2241, 0.15, 0.433, -0.25, 0.1, -0.433, -0.25, 0.1, -0.3882, -0.2241, 0.15, -0.2241, -0.3882, 0.15, 0.25, -0.433, 0.1, 0.2241, -0.3882, 0.15, 0.3882, -0.2241, 0.15, -0.433, -0.25, 0.1, -0.2241, -0.3882, 0.15, -0.25, -0.433, 0.1, 0, -0.5, 0.1, 0.2241, -0.3882, 0.15, 0.25, -0.433, 0.1, -0.25, -0.433, 0.1, -0.2241, -0.3882, 0.15, 0, -0.4482, 0.15, 0, -0.5, 0.1, 0, -0.4482, 0.15, 0.2241, -0.3882, 0.15, -0.25, -0.433, 0.1, 0, -0.4482, 0.15, 0, -0.5, 0.1, 0, -0.3757, -0.15, -0.1613, -0.2793, -0.1094, -0.1878, -0.3254, -0.15, -0.1878, -0.3254, -0.15, -0.1613, -0.2793, -0.1094, -0.2793, -0.1613, -0.1094, 0, -0.3757, -0.15, 0, -0.3225, -0.1094, -0.1613, -0.2793, -0.1094, -0.1878, -0.3254, -0.15, -0.2793, -0.1613, -0.1094, -0.3254, -0.1878, -0.15, 0.1878, -0.3254, -0.15, 0, -0.3225, -0.1094, 0, -0.3757, -0.15, -0.3254, -0.1878, -0.15, -0.2793, -0.1613, -0.1094, -0.3225, 0, -0.1094, 0.1878, -0.3254, -0.15, 0.1613, -0.2793, -0.1094, 0, -0.3225, -0.1094, -0.3254, -0.1878, -0.15, -0.3225, 0, -0.1094, -0.3757, 0, -0.15, 0.3254, -0.1878, -0.15, 0.1613, -0.2793, -0.1094, 0.1878, -0.3254, -0.15, -0.3757, 0, -0.15, -0.3225, 0, -0.1094, -0.2793, 0.1613, -0.1094, 0.3254, -0.1878, -0.15, 0.2793, -0.1613, -0.1094, 0.1613, -0.2793, -0.1094, -0.3757, 0, -0.15, -0.2793, 0.1613, -0.1094, -0.3254, 0.1878, -0.15, 0.3757, 0, -0.15, 0.2793, -0.1613, -0.1094, 0.3254, -0.1878, -0.15, -0.3254, 0.1878, -0.15, -0.2793, 0.1613, -0.1094, -0.1613, 0.2793, -0.1094, 0.3757, 0, -0.15, 0.3225, 0, -0.1094, 0.2793, -0.1613, -0.1094, -0.3254, 0.1878, -0.15, -0.1613, 0.2793, -0.1094, -0.1878, 0.3254, -0.15, 0.3254, 0.1878, -0.15, 0.3225, 0, -0.1094, 0.3757, 0, -0.15, -0.1878, 0.3254, -0.15, -0.1613, 0.2793, -0.1094, 0, 0.3225, -0.1094, 0.3254, 0.1878, -0.15, 0.2793, 0.1613, -0.1094, 0.3225, 0, -0.1094, -0.1878, 0.3254, -0.15, 0, 0.3225, -0.1094, 0, 0.3757, -0.15, 0.1878, 0.3254, -0.15, 0.2793, 0.1613, -0.1094, 0.3254, 0.1878, -0.15, 0, 0.3757, -0.15, 0, 0.3225, -0.1094, 0.1613, 0.2793, -0.1094, 0.1878, 0.3254, -0.15, 0.1613, 0.2793, -0.1094, 0.2793, 0.1613, -0.1094, 0, 0.3757, -0.15, 0.1613, 0.2793, -0.1094, 0.1878, 0.3254, -0.15, 0.1878, 0.3254, -0.15, 0, 0.4482, -0.15, 0, 0.3757, -0.15, 0, 0.3757, -0.15, 0, 0.4482, -0.15, -0.2241, 0.3882, -0.15, 0.1878, 0.3254, -0.15, 0.2241, 0.3882, -0.15, 0, 0.4482, -0.15, 0, 0.3757, -0.15, -0.2241, 0.3882, -0.15, -0.1878, 0.3254, -0.15, 0.3254, 0.1878, -0.15, 0.2241, 0.3882, -0.15, 0.1878, 0.3254, -0.15, -0.1878, 0.3254, -0.15, -0.2241, 0.3882, -0.15, -0.3882, 0.2241, -0.15, 0.3254, 0.1878, -0.15, 0.3882, 0.2241, -0.15, 0.2241, 0.3882, -0.15, -0.1878, 0.3254, -0.15, -0.3882, 0.2241, -0.15, -0.3254, 0.1878, -0.15, 0.3757, 0, -0.15, 0.3882, 0.2241, -0.15, 0.3254, 0.1878, -0.15, -0.3254, 0.1878, -0.15, -0.3882, 0.2241, -0.15, -0.4482, 0, -0.15, 0.3757, 0, -0.15, 0.4482, 0, -0.15, 0.3882, 0.2241, -0.15, -0.3254, 0.1878, -0.15, -0.4482, 0, -0.15, -0.3757, 0, -0.15, 0.3254, -0.1878, -0.15, 0.4482, 0, -0.15, 0.3757, 0, -0.15, -0.3757, 0, -0.15, -0.4482, 0, -0.15, -0.3882, -0.2241, -0.15, 0.3254, -0.1878, -0.15, 0.3882, -0.2241, -0.15, 0.4482, 0, -0.15, -0.3757, 0, -0.15, -0.3882, -0.2241, -0.15, -0.3254, -0.1878, -0.15, 0.1878, -0.3254, -0.15, 0.3882, -0.2241, -0.15, 0.3254, -0.1878, -0.15, -0.3254, -0.1878, -0.15, -0.3882, -0.2241, -0.15, -0.2241, -0.3882, -0.15, 0.1878, -0.3254, -0.15, 0.2241, -0.3882, -0.15, 0.3882, -0.2241, -0.15, -0.3254, -0.1878, -0.15, -0.2241, -0.3882, -0.15, -0.1878, -0.3254, -0.15, 0, -0.3757, -0.15, 0.2241, -0.3882, -0.15, 0.1878, -0.3254, -0.15, -0.1878, -0.3254, -0.15, -0.2241, -0.3882, -0.15, 0, -0.4482, -0.15, 0, -0.3757, -0.15, 0, -0.4482, -0.15, 0.2241, -0.3882, -0.15, -0.1878, -0.3254, -0.15, 0, -0.4482, -0.15, 0, -0.3757, -0.15, 0, 0.3757, 0.15, 0.2241, 0.3882, 0.15, 0.1878, 0.3254, 0.15, 0.1878, 0.3254, 0.15, 0.2241, 0.3882, 0.15, 0.3882, 0.2241, 0.15, 0, 0.3757, 0.15, 0, 0.4482, 0.15, 0.2241, 0.3882, 0.15, 0.1878, 0.3254, 0.15, 0.3882, 0.2241, 0.15, 0.3254, 0.1878, 0.15, -0.1878, 0.3254, 0.15, 0, 0.4482, 0.15, 0, 0.3757, 0.15, 0.3254, 0.1878, 0.15, 0.3882, 0.2241, 0.15, 0.4482, 0, 0.15, -0.1878, 0.3254, 0.15, -0.2241, 0.3882, 0.15, 0, 0.4482, 0.15, 0.3254, 0.1878, 0.15, 0.4482, 0, 0.15, 0.3757, 0, 0.15, -0.3254, 0.1878, 0.15, -0.2241, 0.3882, 0.15, -0.1878, 0.3254, 0.15, 0.3757, 0, 0.15, 0.4482, 0, 0.15, 0.3882, -0.2241, 0.15, -0.3254, 0.1878, 0.15, -0.3882, 0.2241, 0.15, -0.2241, 0.3882, 0.15, 0.3757, 0, 0.15, 0.3882, -0.2241, 0.15, 0.3254, -0.1878, 0.15, -0.3757, 0, 0.15, -0.3882, 0.2241, 0.15, -0.3254, 0.1878, 0.15, 0.3254, -0.1878, 0.15, 0.3882, -0.2241, 0.15, 0.2241, -0.3882, 0.15, -0.3757, 0, 0.15, -0.4482, 0, 0.15, -0.3882, 0.2241, 0.15, 0.3254, -0.1878, 0.15, 0.2241, -0.3882, 0.15, 0.1878, -0.3254, 0.15, -0.3254, -0.1878, 0.15, -0.4482, 0, 0.15, -0.3757, 0, 0.15, 0.1878, -0.3254, 0.15, 0.2241, -0.3882, 0.15, 0, -0.4482, 0.15, -0.3254, -0.1878, 0.15, -0.3882, -0.2241, 0.15, -0.4482, 0, 0.15, 0.1878, -0.3254, 0.15, 0, -0.4482, 0.15, 0, -0.3757, 0.15, -0.1878, -0.3254, 0.15, -0.3882, -0.2241, 0.15, -0.3254, -0.1878, 0.15, 0, -0.3757, 0.15, 0, -0.4482, 0.15, -0.2241, -0.3882, 0.15, -0.1878, -0.3254, 0.15, -0.2241, -0.3882, 0.15, -0.3882, -0.2241, 0.15, 0, -0.3757, 0.15, -0.2241, -0.3882, 0.15, -0.1878, -0.3254, 0.15, 0, 0, -0.1094, 0.1613, 0.2793, -0.1094, 0, 0.3225, -0.1094, 0, 0, -0.1094, 0.2793, 0.1613, -0.1094, 0.1613, 0.2793, -0.1094, 0, 0, -0.1094, 0, 0.3225, -0.1094, -0.1613, 0.2793, -0.1094, 0, 0, -0.1094, 0.3225, 0, -0.1094, 0.2793, 0.1613, -0.1094, 0, 0, -0.1094, -0.1613, 0.2793, -0.1094, -0.2793, 0.1613, -0.1094, 0, 0, -0.1094, 0.2793, -0.1613, -0.1094, 0.3225, 0, -0.1094, 0, 0, -0.1094, -0.2793, 0.1613, -0.1094, -0.3225, 0, -0.1094, 0, 0, -0.1094, 0.1613, -0.2793, -0.1094, 0.2793, -0.1613, -0.1094, 0, 0, -0.1094, -0.3225, 0, -0.1094, -0.2793, -0.1613, -0.1094, 0, 0, -0.1094, 0, -0.3225, -0.1094, 0.1613, -0.2793, -0.1094, 0, 0, -0.1094, -0.2793, -0.1613, -0.1094, -0.1613, -0.2793, -0.1094, 0, 0, -0.1094, -0.1613, -0.2793, -0.1094, 0, -0.3225, -0.1094, 0, 0, 0.1094, 0, 0.3225, 0.1094, 0.1613, 0.2793, 0.1094, 0, 0, 0.1094, -0.1613, 0.2793, 0.1094, 0, 0.3225, 0.1094, 0, 0, 0.1094, 0.1613, 0.2793, 0.1094, 0.2793, 0.1613, 0.1094, 0, 0, 0.1094, -0.2793, 0.1613, 0.1094, -0.1613, 0.2793, 0.1094, 0, 0, 0.1094, 0.2793, 0.1613, 0.1094, 0.3225, 0, 0.1094, 0, 0, 0.1094, -0.3225, 0, 0.1094, -0.2793, 0.1613, 0.1094, 0, 0, 0.1094, 0.3225, 0, 0.1094, 0.2793, -0.1613, 0.1094, 0, 0, 0.1094, -0.2793, -0.1613, 0.1094, -0.3225, 0, 0.1094, 0, 0, 0.1094, 0.2793, -0.1613, 0.1094, 0.1613, -0.2793, 0.1094, 0, 0, 0.1094, -0.1613, -0.2793, 0.1094, -0.2793, -0.1613, 0.1094, 0, 0, 0.1094, 0.1613, -0.2793, 0.1094, 0, -0.3225, 0.1094, 0, 0, 0.1094, 0, -0.3225, 0.1094, -0.1613, -0.2793, 0.1094, -0.0429, -0.1894, -0.1526, 0.0429, -0.1894, 0.1526, 0.0429, -0.1894, -0.1526, 0.0429, -0.1894, 0.1526, 0.0781, -0.1542, -0.1526, 0.0429, -0.1894, -0.1526, 0.0429, -0.1894, 0.1526, 0.0781, -0.1542, 0.1526, 0.0781, -0.1542, -0.1526, -0.0429, -0.1894, -0.1526, -0.0429, -0.1894, 0.1526, 0.0429, -0.1894, 0.1526, -0.0429, -0.1894, -0.1526, -0.0781, -0.1542, 0.1526, -0.0429, -0.1894, 0.1526, -0.0429, -0.1894, -0.1526, -0.0781, -0.1542, -0.1526, -0.0781, -0.1542, 0.1526, 0.0429, -0.1542, 0.1746, -0.0429, 0.1542, 0.1746, 0.0429, 0.1542, 0.1746, 0.0429, 0.1542, 0.1746, 0.0781, -0.1542, 0.1526, 0.0429, -0.1542, 0.1746, 0.0429, 0.1542, 0.1746, 0.0781, 0.1542, 0.1526, 0.0781, -0.1542, 0.1526, 0.0429, -0.1542, 0.1746, -0.0429, -0.1542, 0.1746, -0.0429, 0.1542, 0.1746, -0.0429, -0.1542, 0.1746, -0.0781, 0.1542, 0.1526, -0.0429, 0.1542, 0.1746, -0.0429, -0.1542, 0.1746, -0.0781, -0.1542, 0.1526, -0.0781, 0.1542, 0.1526, -0.0781, -0.1542, 0.1526, -0.0781, 0.1542, -0.1526, -0.0781, 0.1542, 0.1526, -0.0781, -0.1542, 0.1526, -0.0781, -0.1542, -0.1526, -0.0781, 0.1542, -0.1526, -0.0429, -0.1542, -0.1746, 0.0429, 0.1542, -0.1746, -0.0429, 0.1542, -0.1746, -0.0429, 0.1542, -0.1746, -0.0781, -0.1542, -0.1526, -0.0429, -0.1542, -0.1746, -0.0429, 0.1542, -0.1746, -0.0781, 0.1542, -0.1526, -0.0781, -0.1542, -0.1526, -0.0429, -0.1542, -0.1746, 0.0429, -0.1542, -0.1746, 0.0429, 0.1542, -0.1746, 0.0781, 0.1542, -0.1526, 0.0429, 0.1542, -0.1746, 0.0429, -0.1542, -0.1746, 0.0781, 0.1542, -0.1526, 0.0429, -0.1542, -0.1746, 0.0781, -0.1542, -0.1526, 0.0429, 0.1894, -0.1526, -0.0429, 0.1894, 0.1526, -0.0429, 0.1894, -0.1526, -0.0429, 0.1894, 0.1526, -0.0781, 0.1542, -0.1526, -0.0429, 0.1894, -0.1526, -0.0429, 0.1894, 0.1526, -0.0781, 0.1542, 0.1526, -0.0781, 0.1542, -0.1526, 0.0429, 0.1894, -0.1526, 0.0429, 0.1894, 0.1526, -0.0429, 0.1894, 0.1526, 0.0429, 0.1894, -0.1526, 0.0781, 0.1542, 0.1526, 0.0429, 0.1894, 0.1526, 0.0429, 0.1894, -0.1526, 0.0781, 0.1542, -0.1526, 0.0781, 0.1542, 0.1526, 0.0429, 0.1894, -0.1526, 0.0429, 0.1542, -0.1746, 0.0781, 0.1542, -0.1526, -0.0429, 0.1894, -0.1526, 0.0429, 0.1542, -0.1746, 0.0429, 0.1894, -0.1526, -0.0429, 0.1894, -0.1526, -0.0429, 0.1542, -0.1746, 0.0429, 0.1542, -0.1746, -0.0429, 0.1894, -0.1526, -0.0781, 0.1542, -0.1526, -0.0429, 0.1542, -0.1746, 0.0429, -0.1894, -0.1526, 0.0781, -0.1542, -0.1526, 0.0429, -0.1542, -0.1746, 0.0429, -0.1894, -0.1526, 0.0429, -0.1542, -0.1746, -0.0429, -0.1542, -0.1746, 0.0429, -0.1894, -0.1526, -0.0429, -0.1542, -0.1746, -0.0429, -0.1894, -0.1526, -0.0429, -0.1894, -0.1526, -0.0429, -0.1542, -0.1746, -0.0781, -0.1542, -0.1526, 0.0429, 0.1894, 0.1526, 0.0781, 0.1542, 0.1526, 0.0429, 0.1542, 0.1746, 0.0429, 0.1894, 0.1526, 0.0429, 0.1542, 0.1746, -0.0429, 0.1542, 0.1746, 0.0429, 0.1894, 0.1526, -0.0429, 0.1542, 0.1746, -0.0429, 0.1894, 0.1526, -0.0429, 0.1542, 0.1746, -0.0781, 0.1542, 0.1526, -0.0429, 0.1894, 0.1526, 0.0429, -0.1894, 0.1526, 0.0429, -0.1542, 0.1746, 0.0781, -0.1542, 0.1526, -0.0429, -0.1894, 0.1526, 0.0429, -0.1542, 0.1746, 0.0429, -0.1894, 0.1526, -0.0429, -0.1894, 0.1526, -0.0429, -0.1542, 0.1746, 0.0429, -0.1542, 0.1746, -0.0429, -0.1894, 0.1526, -0.0781, -0.1542, 0.1526, -0.0429, -0.1542, 0.1746, 0.0781, -0.1542, -0.1526, 0.0781, 0.1542, 0.1526, 0.0781, 0.1542, -0.1526, 0.0781, -0.1542, -0.1526, 0.0781, -0.1542, 0.1526, 0.0781, 0.1542, 0.1526)

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="CenterContainer"]
layout_mode = 2
split_offset = 800

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HSplitContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("1_v6p8y")
theme_override_font_sizes/normal_font_size = 64
text = "  FastThings"
fit_content = true
autowrap_mode = 0
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 35
script = ExtResource("2_hafda")

[node name="StartButton" type="Button" parent="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "  Start  "

[node name="SettingsButton" type="Button" parent="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "  Settings  "

[node name="CreditsButton" type="Button" parent="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "  Credits  "

[node name="ExitButton" type="Button" parent="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 48
text = "  Exit  "

[node name="TextureRect" type="TextureRect" parent="CenterContainer/HSplitContainer"]
layout_mode = 2
texture = SubResource("ViewportTexture_ig5kc")
stretch_mode = 4

[node name="SubViewport" type="SubViewport" parent="CenterContainer/HSplitContainer"]
transparent_bg = true
screen_space_aa = 1
size = Vector2i(800, 800)
render_target_update_mode = 4

[node name="StaticFloor" type="StaticBody3D" parent="CenterContainer/HSplitContainer/SubViewport"]

[node name="Floor2" parent="CenterContainer/HSplitContainer/SubViewport/StaticFloor" instance=ExtResource("2_ak2if")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CenterContainer/HSplitContainer/SubViewport/StaticFloor"]
shape = SubResource("BoxShape3D_05l2w")

[node name="StaticWall" type="StaticBody3D" parent="CenterContainer/HSplitContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2)

[node name="Wall_Decorated2" parent="CenterContainer/HSplitContainer/SubViewport/StaticWall" instance=ExtResource("3_ig5kc")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CenterContainer/HSplitContainer/SubViewport/StaticWall"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
shape = SubResource("BoxShape3D_hafda")

[node name="WorldEnvironment" type="WorldEnvironment" parent="CenterContainer/HSplitContainer/SubViewport"]
environment = SubResource("Environment_hafda")

[node name="Camera3D" type="Camera3D" parent="CenterContainer/HSplitContainer/SubViewport"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 4, 7, 4)
projection = 1
size = 13.0
script = SubResource("GDScript_ig5kc")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="CenterContainer/HSplitContainer/SubViewport/Camera3D"]
transform = Transform3D(0.866027, -0.43301, 0.249997, 0.353551, 0.883884, 0.306188, -0.353551, -0.17678, 0.918559, 0, 0, 0)
shadow_enabled = true
sky_mode = 1

[node name="Coin9" type="Area3D" parent="CenterContainer/HSplitContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
script = SubResource("GDScript_hafda")

[node name="Coin_A2" parent="CenterContainer/HSplitContainer/SubViewport/Coin9" instance=ExtResource("4_05l2w")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CenterContainer/HSplitContainer/SubViewport/Coin9"]
transform = Transform3D(1.35, 0, 0, 0, 1.35, 0, 0, 0, 1.35, 0, 0, 0)
shape = SubResource("ConcavePolygonShape3D_tpml5")

[connection signal="pressed" from="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer/StartButton" to="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer" method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer/SettingsButton" to="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer" method="_on_settings_button_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer/CreditsButton" to="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer" method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer/ExitButton" to="CenterContainer/HSplitContainer/VBoxContainer/MarginContainer/VBoxContainer" method="_on_exit_button_pressed"]
[connection signal="body_entered" from="CenterContainer/HSplitContainer/SubViewport/Coin9" to="CenterContainer/HSplitContainer/SubViewport/Coin9" method="_on_body_entered"]
